--- a/workers/reddit-api/wrangler.toml
+++ b/workers/reddit-api/wrangler.toml
@@ -11,3 +11,10 @@ name = "reddit-api-worker"
 
 [env.staging]
 name = "reddit-api-worker-staging"
+
+[observability]
+enabled = true
+head_sampling_rate = 1 # optional. default = 1.
+
+[limits]
+cpu_ms = 10000
