--- a/workers/reddit-api/package.json
+++ b/workers/reddit-api/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240909.0",
     "wrangler": "^4.20.0"
+  },
+  "dependencies": {
+    "@neondatabase/serverless": "^1.0.1"
   }
 }
