--- a/workers/reddit-api/wrangler.toml
+++ b/workers/reddit-api/wrangler.toml
@@ -3,6 +3,9 @@ main = "src/index.ts"
 compatibility_date = "2024-06-16"
 compatibility_flags = ["nodejs_compat"]
 
+[triggers]
+crons = ["0 1 * * *"]
+
 [vars]
 REDDIT_USER_AGENT = "WReddit/1.0.0"
 
